[package]
name = "uniquewords-rs"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Count the frequencies of words in text file(s)"
repository = "https://github.com/ninpnin/uniquewords-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.3", features = ["derive"] }
indicatif = "0.17.3"
itertools = "0.10.3"
log = "0.4.17"
serde = "1.0.152"
serde_json = "1.0.92"
